--- a/Src/Sample/AsyncDomainEventSubscriber/Sample.AsyncDomainEventSubscriber.csproj
+++ b/Src/Sample/AsyncDomainEventSubscriber/Sample.AsyncDomainEventSubscriber.csproj
@@ -39,12 +39,16 @@
       <HintPath>..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.dll</HintPath>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -64,9 +68,9 @@
       <Project>{c00b8ad6-47c2-4642-877e-2c759d05dcfe}</Project>
       <Name>IFramework.EntityFramework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
-      <Project>{f3932367-d3ea-4e8a-ab12-5fb785b93a39}</Project>
-      <Name>IFramework</Name>
+    <ProjectReference Include="..\..\iFramework\IFramework4.5.csproj">
+      <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
+      <Name>IFramework4.5</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.ApplicationEvent\Sample.ApplicationEvent.csproj">
       <Project>{7c17f97f-3515-4a1b-aead-01689d087de0}</Project>
