--- a/Src/Sample/Sample.Command/Sample.Command.csproj
+++ b/Src/Sample/Sample.Command/Sample.Command.csproj
@@ -55,9 +55,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
-      <Project>{f3932367-d3ea-4e8a-ab12-5fb785b93a39}</Project>
-      <Name>IFramework</Name>
+    <ProjectReference Include="..\..\iFramework\IFramework4.5.csproj">
+      <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
+      <Name>IFramework4.5</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.DTO\Sample.DTO.csproj">
       <Project>{279b5ee0-22ca-4672-be92-9b6658dcdae3}</Project>
