--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -148,16 +148,16 @@
         </constructor>
       </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
-      <register type="IMessageQueueClient" mapTo="ServiceBusClient">
+     <!-- <register type="IMessageQueueClient" mapTo="ServiceBusClient">
         <constructor>
           <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString" />
         </constructor>
-      </register>
-      <!--<register type="IMessageQueueClient" mapTo="KafkaClient">
+      </register>-->
+      <register type="IMessageQueueClient" mapTo="KafkaClient">
         <constructor>
           <param name="zkConnectionString" value="192.168.99.60:2181" />
         </constructor>
-      </register>-->
+      </register>
       <register type="IMessagePublisher" mapTo="MessagePublisher">
         <lifetime type="singleton" />
         <constructor>
