--- a/Src/Sample/Sample.WcfService/log4net.config
+++ b/Src/Sample/Sample.WcfService/log4net.config
@@ -60,6 +60,7 @@
     <filter type="log4net.Filter.DenyAllFilter" />
     <layout type="IFramework.Log4Net.JsonLogLayout, IFramework.Log4Net" >
       <app value="WcfService" />
+      <serializeMessageObject value="true" />
     </layout>
     <!--<layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
@@ -74,7 +75,7 @@
   <appender name="kafkaAppender" type="log4net.Kafka.KafkaAppender, log4net.Kafka">
     <KafkaSettings>
       <brokers>
-        <add value="http://localhost:9092" />
+        <add value="http://192.168.99.134:9092" />
       </brokers>
       <topic type="log4net.Layout.PatternLayout">
         <conversionPattern value="Kafka.%level" />
@@ -83,6 +84,7 @@
     </KafkaSettings>
     <layout type="IFramework.Log4Net.JsonLogLayout, IFramework.Log4Net" >
       <app value="WcfService" />
+      <serializeMessageObject value="true" />
     </layout>
     <threshold value="DEBUG" />
     <!--<layout type="log4net.Layout.PatternLayout">
