--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -71,9 +71,12 @@
     <Compile Include="Infrastructure\Logging\MockLoggerFactory.cs" />
     <Compile Include="Infrastructure\QueryExtension.cs" />
     <Compile Include="IoC\AopInjection.cs" />
+    <Compile Include="IoC\ILogInterceptionBehavior.cs" />
     <Compile Include="IoC\IContainer.cs" />
     <Compile Include="IoC\Injection.cs" />
     <Compile Include="IoC\Lifetime.cs" />
+    <Compile Include="IoC\LogInterceptionBehavior.cs" />
+    <Compile Include="IoC\LogInterceptionSerializeAttribute.cs" />
     <Compile Include="IoC\Parameter.cs" />
     <Compile Include="MessageQueue\AutoOffsetReset.cs" />
     <Compile Include="MessageQueue\Configuration.cs" />
