--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Infrastructure\Logging\AopLeavingLog.cs" />
     <Compile Include="Infrastructure\Logging\ILoggerLevelController.cs" />
     <Compile Include="Infrastructure\Logging\JsonLogBase.cs" />
+    <Compile Include="Infrastructure\Logging\Level.cs" />
     <Compile Include="Infrastructure\Logging\MockLogger.cs" />
     <Compile Include="Infrastructure\Logging\MockLoggerFactory.cs" />
     <Compile Include="Infrastructure\Logging\LoggerLevelController.cs" />
